enh(ui): add dynamic dashboard components

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -24,6 +24,11 @@
       "PROFILE": "My Profile",
       "ACCOUNT": "My Account",
       "TASK": "My Task"
+    },
+    "USER_DATA" : {
+      "BLOOD": "Blood",
+      "HEIGHT": "Height",
+      "WEIGHT": "Weight"
     }
   }
 }
